    'issuetype'.

  [New features]

  - New configuration options for the 'githooks' section: 'error-header' and
    'error-footer'.

  - CheckReference: New plugin.

  - CheckJira: New configuration options: 'jql', 'ref-jql', and
    'skip-merges'.

  - CheckCommit: New configuration options: 'merger' and 'push-limit'.

  - CheckFile: New configuration option: 'basename.sizelimit'.

1.16.0    2017-05-20 18:48:38-03:00 America/Sao_Paulo

  [New features]

  - CheckLog: New option title-match to check the commit message title.

  [Fixes]

  - (PR#37) Specifying multiple anonymous subs for the same hooks did not
    work. Only the first sub that was defined would actually be called. Fixed
    by Dave Rolsky.

  - Test suite bug triggered by Git 2.13.0.

1.15.1    2017-03-02 14:26:16-03:00 America/Sao_Paulo

  [Changes]

  - The old t/test-functions.pl file was turned into a proper module as
    Git::Hooks::Test, which made the tests simpler.

  - Add Travis CI support in GitHub.

  - Use Test::Requires::Git to check the Git version during testing.

  [Thanks]

  - Thanks for the good folks at CV-Library for a bunch of pull requests
    that made most of this new version.
    http://tech-blog.cv-library.co.uk/2017/02/16/february-pull-request-challenge/

1.15.0    2017-01-04 21:45:26-02:00 America/Sao_Paulo

  [New features]

  - New method Git::More::hookname returns the name of the current hook.

  [Fixes]

  - Fix regression on Git::More::get_commits

1.14.2    2016-11-25 10:44:51-02:00 America/Sao_Paulo

  [Fixes]

  - Gerrit 2.13 slightly changed how it passes information to the hooks and
    we had to make some changes to accomodate it.

1.14.1    2016-11-06 17:02:19-02:00 America/Sao_Paulo

  [Fixes]

  - As it were the boolean return from the hooks were being
    disregarded. Git::Hooks considered a failure only when some hooks
    invoked the Git::Hooks::error method. Now it considers a failure if any